# calcver-rs

./: .travis.yml  Cargo.toml  readme.md
src/: config.rs  error.rs  lib.rs  project.rs  repository.rs  semver.rs  tpl.rs  version.rs
tests/: integration_test_test.rs
