[package]
name = "calcver"
version = "0.1.0-beta.3"
authors = ["Jerahmeel Cosinas <me@jerahmeelcosinas.net>","Joelle Ortiz <contact@joelleortiz.me>"]
description = "auto calculation of version based on http://conventionalcommits.org"
documentation = "https://github.com/easy-semver/calcver-rs"
repository = "https://github.com/easy-semver/calcver-rs"
readme = "readme.md"
keywords = ["semver", "conventional-commits","lib"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "easy-semver/calcver-rs" }
codecov = { repository = "easy-semver/calcver-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
git2 = "0.6"
handlebars = "0.29.0"
quick-error = "^1.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "0.2"
semver = "0.9.0"